# lembretezap

./: .env.example  .env.test  .gitignore  ATUALIZAR_VPS.md  CONFORMIDADE_PEDIDO.md  CONTRIBUTING.md  DEBUG_WHATSAPP_DELIVERY.md  DEPLOY.md  Dockerfile  FEASIBILITY.md  FEATURE_ICS_CALENDAR.md  FLUXO_ICS.md  INSTALACAO_VPS_LINUX.md  PASSO_A_PASSO_TESTE.md  README.md  README_BACKEND.md  ROADMAP.md  SECURITY.md  TESTADORES.md  TESTAR_COM_DOCKER.md  app.py  core_agent_lines.sh  debug_keywords.py  debug_nuke_routing.py  debug_router.py  debug_vague.py  docker-compose.prod.yml  docker-compose.yml  final_test.py  final_test_results.txt  generate_test_data.py  init_db.py  locustfile.py  logs_ics.txt  next.config.js  package-lock.json  package.json  pyproject.toml  pytest_output.txt  stress_test_results_20260322_183704.json  (+25 more)
app/: error.tsx  globals.css  layout.tsx  page.tsx
app/about/: page.tsx
backend/: __init__.py  admin_commands.py  agenda_view_tracker.py  app.py  atendimento_contact.py  audio_request.py  auth.py  bookmark.py  calling_phrases.py  client_memory.py  command_filter.py  command_i18n.py  command_nl.py  command_parser.py  confirm_actions.py  confirmations.py  context_reasoner.py  crypto_prices.py  database.py  empathy_positive_data.py  empathy_positive_messages.py  god_mode_lockout.py  guardrails.py  handler_context.py  handlers.py  handlers_agenda_remove.py  handlers_limpeza.py  handlers_organizacao.py  handlers_pomodoro.py  house_chores.py  house_chores_catalog.py  ics_handler.py  injection_guard.py  lead_time.py  limits.py  list_history.py  list_item_correction.py  locale.py  logger.py  models_db.py  (+42 more)
bridge/: package-lock.json  package.json
components/: HeaderActions.tsx  Logo.tsx  NavLinks.tsx
docs/: MESSAGE_FLOW_DIAGRAM.md  ROTEIROS_STRESS_TEST_HUMANO.md
nanobot/: __init__.py
prompts/: intent_classification.txt  scope_filter.txt  task_type_examples.json  yearly_recap_mock_messages.md
providers/: AuthProvider.tsx
scripts/: backup_nanobot.sh  backup_zapista.sh  clean-next.mjs  cron.nanobot-backup  cron.zapista-backup  debug_fixes.py  debug_ics.py  debug_regex.py  diagnose_hang.py  diagnose_tts.py  init-wal.sh  install_piper.sh  install_vps.sh  install_vps_nuke.sh  kill-port-node.mjs  pack-static-preview.mjs  pack-zappelin-website.mjs  reset_whatsapp.sh  run_stress_test.py  test_audio_patterns.py  update_vps.sh  verify_dialects.py
tests/: conftest.py  load_wal.py  repro_add_bug.py  repro_bulk_delete.py  test_admin_commands.py  test_agenda_fix.py  test_agenda_friday_filter.py  test_agenda_time.py  test_agent_organizer.py  test_audio_request.py  test_backend.py  test_backend_bugs.py  test_channels_whatsapp.py  test_day_truncation.py  test_ddd_timezone.py  test_deep_stress_load.py  test_docker.sh  test_extreme_stress.py  test_hallucination_regression.py  test_human_roteiros_simulation.py  test_ics_handler.py  test_list_search_logic.py  test_load.py  test_load_scaling.py  test_message_buffer.py  test_no_nudge.py  test_onboarding_name.py  test_period_parser.py  test_recipe_storage.py  test_recipe_stress.py  test_recurring_event_flow.py  test_reminder_flow.py  test_resolve_response_language.py  test_sanitize.py  test_sensitive_data_filter.py  test_stale_flow.py  test_stop_resume.py  test_stress_verification.py  test_suite.py  test_tool_validation.py  (+5 more)
tmp/: check_modules.py  inspect_nuke.py  inspect_nuke_v2.py  inspect_test_db.py  test_dates.py  test_list_name.py  verify_fixes.py  whatsapp_test.py  whatsapp_test_multilang.py
workspace/: AGENTS.md  ARCHITECTURE.md  EMPATIA_POSITIVIDADE_LEMBRETES.md  FEATURES_LEMBRETES.md  FEATURE_LISTAS_APRENDIZAGEM.md  FEATURE_VISUALIZACAO_RELATORIOS.md  FLOWS_ONBOARDING.md  HEARTBEAT.md  LOGICA_PROATIVA.md  MEMORIA_CLIENTE.md  ONBOARDING_LEMBRETES.md  PLANO_IMPLEMENTACAO.md  PRINCIPIOS_ORGANIZACAO.md  RECURSOS_NAO_IMPLEMENTADOS.md  REMINDER_LEAD_CASES.md  RULES_DATAS.md  RULES_ONBOARDING.md  SOUL.md  TOOLS.md  USER.md
zapista/: __init__.py  __main__.py  clock_drift.py
(+185 files in other folders)
